--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
+# laravel 8 specific
+public/js/laroute.js
+
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
