--- a/package.json
+++ b/package.json
@@ -2,35 +2,42 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "@types/lozad": "^1.9.0",
+        "@types/select2": "^4.0.53",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "jquery": "^3.6.0",
+        "laravel-mix": "^6.0.16",
         "lodash": "^4.17.5",
         "popper.js": "^1.15.0",
-        "resolve-url-loader": "^2.3.2",
-        "sass": "^1.22.12",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.12",
         "sass-loader": "^7.3.1",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10"
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "bs4-summernote": "^0.8.10",
         "datatables": "^1.10.18",
         "jquery-countto": "^1.2.0",
         "jquery-scroll-lock": "^3.1.3",
         "jquery.appear": "^1.0.1",
         "js-cookie": "^2.2.0",
-        "simplebar": "^2.6.1"
+        "lozad": "^1.16.0",
+        "sharer.js": "^0.4.1",
+        "simplebar": "^2.6.1",
+        "sweetalert2": "^10.16.0"
     }
 }
