--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,13 +1,12 @@
 {
-    "/assets/js/codebase.app.js": "/assets/js/codebase.app.js",
-    "/assets/js/laravel.app.js": "/assets/js/laravel.app.js",
-    "/assets/css/codebase.css": "/assets/css/codebase.css",
-    "/assets/css/themes/corporate.css": "/assets/css/themes/corporate.css",
-    "/assets/css/themes/earth.css": "/assets/css/themes/earth.css",
-    "/assets/css/themes/elegance.css": "/assets/css/themes/elegance.css",
-    "/assets/css/themes/flat.css": "/assets/css/themes/flat.css",
-    "/assets/css/themes/pulse.css": "/assets/css/themes/pulse.css",
-    "/css/app.css": "/css/app.css",
+    "/js/popper.js": "/js/popper.js",
+    "/js/laravel.app.js": "/js/laravel.app.js",
     "/assets/js/pages/tables_datatables.js": "/assets/js/pages/tables_datatables.js",
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/css/themes/flat.css": "/css/themes/flat.css",
+    "/css/themes/elegance.css": "/css/themes/elegance.css",
+    "/css/themes/earth.css": "/css/themes/earth.css",
+    "/css/themes/corporate.css": "/css/themes/corporate.css",
+    "/css/themes/pulse.css": "/css/themes/pulse.css"
 }
